testing HomeView with context variables

--- a/projects/templates/projects/am_home.html
+++ b/projects/templates/projects/am_home.html
@@ -8,7 +8,7 @@
           <div class="col-8 text-center mx-auto">
             <p class="header-text mb-0">
               <br><br><br><br>
-              {{marquesina}}
+              {{testvar}}
             </p>
           </div>
       </div>
