test of MVC for a project atribute

--- a/projects/templates/projects/am_home.html
+++ b/projects/templates/projects/am_home.html
@@ -36,7 +36,7 @@
             <h2 class="section-title-light">Ceremonia</h2>
             <hr class="hr-dark my-4">
             <p class= "mb-4 plain-text">
-              {{nombre_ceremonia}}<br><br>
+              {{test_project.title}}<br><br>
               {{hora_ceremonia}}<br><br>
               {{direccion_ceremonia}}<br><br>
               <a class="btn btn-primary" href="#mapas">Ver mapa</a>
