first projects published

--- a/projects/static/projects/css/body_style.css
+++ b/projects/static/projects/css/body_style.css
@@ -131,7 +131,7 @@
 /*texto*/
 
 .plain-text {
-  color: var(--azul);
+  color: ;
   font-size: 1.2rem;
   font-family: Tahoma, Helvetica, Verdana;
 }
