--- a/projects/templates/projects/navigation.html
+++ b/projects/templates/projects/navigation.html
@@ -11,19 +11,10 @@
         <ul class="navbar-nav ml-auto">
 
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'home' %}">Confirmar asistencia</a>
+            <a class="nav-link js-scroll-trigger" href="{% url 'home' %}#things">Things I've done</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'home' %}#ceremonia">Ceremonia</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'home' %}#recepcion">Recepción</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'home' %}#mapas">Mapa</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'home' %}#historia">Historia</a>
+            <a class="nav-link js-scroll-trigger" href="{% url 'home' %}">About me</a>
           </li>
 
         </ul>
